cmake_minimum_required(VERSION 2.8.4)
project(Trie)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -g -Wall -pedantic")
# Generate shared library libTrie.so file.
ADD_LIBRARY(Trie SHARED Trie.cpp)

add_executable(Example1.out Example1.cpp)
add_executable(Example2.out Example2.cpp)
add_executable(Example3.out Example3.cpp)
add_executable(Example4.out Example4.cpp)
add_executable(Example5.out Example5.cpp)
add_executable(Example6.out Example6.cpp)
add_executable(Example7.out Example7.cpp)
add_executable(Example8.out Example8.cpp)
add_executable(Example9.out Example9.cpp)
add_executable(Example10.out Example10.cpp)
add_executable(Example11.out Example11.cpp)

target_link_libraries(Example1.out Trie pthread)
target_link_libraries(Example2.out Trie pthread)
target_link_libraries(Example3.out Trie pthread)
target_link_libraries(Example4.out Trie pthread)
target_link_libraries(Example5.out Trie pthread)
target_link_libraries(Example6.out Trie pthread)
target_link_libraries(Example7.out Trie pthread)
target_link_libraries(Example8.out Trie pthread)
target_link_libraries(Example9.out Trie pthread)
target_link_libraries(Example10.out Trie pthread)
target_link_libraries(Example11.out Trie pthread)

